Revision history for paths

{{$NEXT}}

10.0.9  2022-11-19T19:36:49+01:00
    - Fix exception if given path was a dir but was not readable
    - Added :readable-files option to indicate that only readable
      files should be produced, and made that the default

10.0.8  2022-11-11T19:01:06+01:00
    - Add support for paths(:!file, ...) to only produce directory paths
    - Fix race condition in testing, Haytham Elganiny++
    - Allow for selective import and renaming of imports

10.0.7  2022-08-10T16:17:40+02:00
    - Also export "is-regular-file" helper subroutine

10.0.6  2022-07-10T15:14:51+02:00
    - Do not follow symlinked directories by default anymore.
    - Add :follow-symlinks argument to follow symlinked directories

10.0.5  2022-06-26T14:32:20+02:00
    - If the given path is not a directory, but it exists and is matched
      by the file-matcher, then produce only that path

10.0.4  2022-06-21T12:09:46+02:00
    - Make defaults also active when undefined values have been specified
      to ease integration into CLI's
    - Add sponsor link
    - Update copyright year

10.0.3  2021-11-07T12:02:29+01:00
    - Remove the class definition needed for mi6

10.0.2  2021-10-29T20:52:55+02:00
    - Marking the iterator as "lazy" was **not** a good idea.  It stops
      you from just doing .elems if you just want to know the number of
      paths found.

10.0.1  2021-10-29T15:53:36+02:00
    - Make sure iterator is marked as lazy and non-deterministic (as the
      OS may decide to change the order and/or the file system contents
      may change).

10.0.0  2021-10-09T12:51:42+02:00
    - Needed to switch to a higher version as App::Mi6 once again decided
      to upload as a "v6.c" version

0.0.2  2021-10-09T12:39:02+02:00
    - Add more tests from a temporary directory
    - First released version after App::Mi6 snafu fixed

0.0.1  2021-10-08T17:12:19+02:00
    - Initial version