@@ -1,6 +1,9 @@
 Revision history for paths
 
 {{$NEXT}}
+    - Add sponsor button
+    - Show CI badge for each OS
+    - Update copyright year
 
 10.0.9  2022-11-19T19:36:49+01:00
     - Fix exception if given path was a dir but was not readable
